// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackTop > BackTop baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="button-group"
    data-v-33e4f6e7=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-33e4f6e7=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        圆形返回顶部
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-33e4f6e7=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        半圆形返回顶部
      </span>
      <!---->
    </button>
  </div>
  <div
    data-v-33e4f6e7=""
  >
    <div
      class="t-back-top t-back-top--fixed t-back-top--round"
      data-v-33e4f6e7=""
      style="display: none;"
    >
      <svg
        class="t-icon t-icon-backtop"
        fill="none"
        height="1em"
        style="font-size: 22px;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M4 4H20V6H4V4ZM12 7.58579L18.9142 14.5L17.5 15.9142L13 11.4142V21H11V11.4142L6.5 15.9142L5.08579 14.5L12 7.58579Z"
          fill="currentColor"
        />
      </svg>
      <span
        class="t-back-top__text--round"
      >
        顶部
      </span>
    </div>
  </div>
  
</div>
`;

exports[`BackTop > BackTop mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-806aae90=""
>
  <h1
    class="title"
    data-v-806aae90=""
  >
    BackTop 回到顶部
  </h1>
  <p
    class="summary"
    data-v-806aae90=""
  >
    当页面过长往下滑动是会出现返回顶部的便捷操作，帮助用户快速回到页面顶部
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-806aae90=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        形状
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="button-group"
        data-v-33e4f6e7=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-33e4f6e7=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            圆形返回顶部
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-33e4f6e7=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            半圆形返回顶部
          </span>
          <!---->
        </button>
      </div>
      <div
        data-v-33e4f6e7=""
      >
        <div
          class="t-back-top t-back-top--fixed t-back-top--round"
          data-v-33e4f6e7=""
          style="display: none;"
        >
          <svg
            class="t-icon t-icon-backtop"
            fill="none"
            height="1em"
            style="font-size: 22px;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M4 4H20V6H4V4ZM12 7.58579L18.9142 14.5L17.5 15.9142L13 11.4142V21H11V11.4142L6.5 15.9142L5.08579 14.5L12 7.58579Z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-back-top__text--round"
          >
            顶部
          </span>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-806aae90=""
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="group"
        data-v-806aae90=""
      >
        
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        <div
          class="t-skeleton item"
          data-v-806aae90=""
        >
          
          
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 165.5px; height: 165.5px; border-radius: 12px;"
            >
              <!---->
            </div>
            
          </div>
          <div
            class="t-skeleton__row"
          >
            
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-none"
              style="width: 100px;"
            >
              <!---->
            </div>
            
          </div>
          
          
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="blank"
    data-v-806aae90=""
  />
</div>
`;
